edit storm, ship

--- a/MyThesis/Monitor/Monitor.csproj
+++ b/MyThesis/Monitor/Monitor.csproj
@@ -60,6 +60,8 @@
     <Content Include="app\assets\css\common.css" />
     <Content Include="app\assets\css\main.css" />
     <Content Include="app\assets\css\login-page.css" />
+    <Content Include="app\assets\css\push-down.css" />
+    <Content Include="app\assets\img\logo\Backround.jpg" />
     <Content Include="app\assets\img\logo\logo.png" />
     <Content Include="app\assets\img\ship-marker\black.png" />
     <Content Include="app\assets\img\ship-marker\blue.png" />
@@ -97,6 +99,21 @@
     <Content Include="app\indexSvc.js" />
     <Content Include="app\src\common\commonDataSvc.js" />
     <Content Include="app\src\common\commonSvc.js" />
+    <Content Include="app\src\editStorm\addStorm\add-storm.html" />
+    <Content Include="app\src\editStorm\addStorm\add-storm.js" />
+    <Content Include="app\src\editStorm\addStorm\addStormCtrl.js" />
+    <Content Include="app\src\editStorm\editStorm\edit-storm.html" />
+    <Content Include="app\src\editStorm\editStorm\edit-storm.js" />
+    <Content Include="app\src\editStorm\editStorm\editStormCtrl.js" />
+    <Content Include="app\src\editWarningLocation\warning-location.html" />
+    <Content Include="app\src\editWarningLocation\warningLocationCtrl.js" />
+    <Content Include="app\src\editWarningLocation\warningLocationDataSvc.js" />
+    <Content Include="app\src\edit\editShip\edit-ship.html" />
+    <Content Include="app\src\edit\editShip\edit-ship.js" />
+    <Content Include="app\src\edit\editShip\editShipCtrl.js" />
+    <Content Include="app\src\edit\addShip\add-ship.html" />
+    <Content Include="app\src\edit\addShip\add-ship.js" />
+    <Content Include="app\src\edit\addShip\addShipCtrl.js" />
     <Content Include="app\src\law\law.html" />
     <Content Include="app\src\law\lawCtrl.js" />
     <Content Include="app\src\editStorm\storm.html" />
@@ -105,6 +122,10 @@
     <Content Include="app\src\edit\edit.html" />
     <Content Include="app\src\edit\editCtrl.js" />
     <Content Include="app\src\edit\editDataSvc.js" />
+    <Content Include="app\src\pushDown\pushDownSvc.js" />
+    <Content Include="app\src\pushDown\pushDownCtrl.js" />
+    <Content Include="app\src\pushDown\push-down.html" />
+    <Content Include="app\src\pushDown\push-down.js" />
     <Content Include="app\src\weather\weather.html" />
     <Content Include="app\src\weather\weatherCtrl.js" />
     <Content Include="app\src\simulate\simulate.html" />
