--- a/MyThesis/Monitor/Monitor.csproj
+++ b/MyThesis/Monitor/Monitor.csproj
@@ -105,6 +105,12 @@
     <Content Include="app\src\editStorm\editStorm\edit-storm.html" />
     <Content Include="app\src\editStorm\editStorm\edit-storm.js" />
     <Content Include="app\src\editStorm\editStorm\editStormCtrl.js" />
+    <Content Include="app\src\editWarningLocation\addWarning\add-warning.html" />
+    <Content Include="app\src\editWarningLocation\addWarning\add-warning.js" />
+    <Content Include="app\src\editWarningLocation\addWarning\addWarningCtrl.js" />
+    <Content Include="app\src\editWarningLocation\editWarning\edit-warning.html" />
+    <Content Include="app\src\editWarningLocation\editWarning\edit-warning.js" />
+    <Content Include="app\src\editWarningLocation\editWarning\editWarningCtrl.js" />
     <Content Include="app\src\editWarningLocation\warning-location.html" />
     <Content Include="app\src\editWarningLocation\warningLocationCtrl.js" />
     <Content Include="app\src\editWarningLocation\warningLocationDataSvc.js" />
